discussion/kv_engine/125163/125163_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-07 18:52:47.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-07 19:30:07.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27383/ : FAILURE

Failure of a CTest test 230/382 Test #227: ep_testsuite.full_eviction.magma .............................................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27383/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1603/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:158:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:169:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:175:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:181:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:187:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:193:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.cc:199:5: warning: use auto when initializing with a cast to avoid duplicating the type name [modernize-use-auto]
    MetaData* docMeta =
    ^~~~~~~~
    auto
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:45:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:49:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1603/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:25:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1603/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/121/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23426/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3014/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3071/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2064/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10868/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3008/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
